# cliente-xmpp

./: .gitignore  AGENTS.md  README.md  WhatsApp-CAN.spec  build_release.ps1  clean_project.bat  inspect_db.py  publish_release.bat  pyproject.toml  release_notes.txt  update.py  update.spec  update_version_info.txt  windows_version_info.txt
cliente_xmpp/: __init__.py  updates.py
docs/: ACTUALIZACIONES.md  MENCIONES_NATIVAS_WHATSAPP_PARA_MARCO.md  NOTIFICACIONES_WINDOWS.md  PUENTE_PERSONALIZADO.md  PUENTE_WHATSAPP_OTROS_SERVIDORES.md  PUENTE_WHATSAPP_SINCRONIZACION_LEIDOS.md  PUENTE_WHATSAPP_STICKERS_MENCIONES_REENVIOS.md  SITIO_GITHUB_PAGES.md  guia_stickers_slidge_whatsapp.docx  index.html  privacidad.html  terminos.html
installer/: WhatsApp-CAN.iss
tests/: test_audio_process.py  test_group_helpers.py  test_http_upload.py  test_media.py  test_mentions.py  test_message_store.py  test_migrate_slidge_mexico_aliases.py  test_mpv_player.py  test_new_chat.py  test_patch_slidge_mentions.py  test_patch_slidge_message_presence.py  test_patch_slidge_presence_cache.py  test_patch_slidge_presence_last_seen.py  test_patch_slidge_presence_sources.py  test_patch_slidge_read_sync.py  test_patch_slidge_roster_sync.py  test_reply_sending.py  test_sentiment.py  test_settings.py  test_statistics.py  test_statistics_dialog.py  test_storage_manager.py  test_ui_performance.py  test_updates.py  test_whatsapp_message_features.py  test_windows_notifications.py
tools/: Dockerfile.bridge-completo.patch  Dockerfile.bridge-menciones-stickers  Dockerfile.bridge-message-presence-v10  (+31 more)
(+51 files in other folders)
