[project]
name = "cliente-xmpp"
version = "0.1.0"
description = "Cliente Windows en Python/wx para usar un bridge XMPP de WhatsApp."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "keyring>=25.0.0",
    "slixmpp>=1.10.0",
    "wxPython>=4.2.2",
]

[project.scripts]
cliente-xmpp = "cliente_xmpp.app.main:main"

[tool.setuptools.package-data]
cliente_xmpp = ["lib/*.dll"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
